--- a/app/assets/stylesheets/cfp/ui/_base.css.scss
+++ b/app/assets/stylesheets/cfp/ui/_base.css.scss
@@ -89,6 +89,7 @@ ul.proposals {
 
     .tit-prop {
       display: inline-block;
+      margin-top: 25px;
       vertical-align: middle;
       width: 495px;
 
@@ -105,7 +106,6 @@ ul.proposals {
       font-family: 'Open Sans', sans-serif;
       font-weight: 600;
       font-size: 16px;
-      margin-left: 41px;
       padding: 25px 0;
       text-align: center;
       width: 130px;
@@ -148,7 +148,6 @@ ul.proposals {
 
 .gold {
   @extend .silver;
-  margin-right: 18px;
 
   i {
     color: $gold;
